--- a/_posts/2017-07-29-仪表助手.md
+++ b/_posts/2017-07-29-仪表助手.md
@@ -10,7 +10,7 @@ tags:
     - Download
 ---
 
-> “//”
+> “Download”
 
 ---
 
@@ -20,7 +20,7 @@ tags:
 
 [KLD仪表助手下载链接](http://blog.wmmou.cn/download/KLD仪表助手.apk)
 
-##仪表助手更新说明
+##KLD仪表助手更新说明
 
 ###2017.08.01
 
