--- a/_posts/2017-08-01-仪表助手.md
+++ b/_posts/2017-08-01-仪表助手.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      KLD仪表助手下载链接
+title:      仪表助手下载链接
 subtitle:    "\"仪表助手\""
 date:       2017-08-01
 author:     BY
@@ -14,16 +14,15 @@ tags:
 
 ---
 
-## KLD仪表助手下载链接
+## 仪表助手下载链接
 
- [KLD仪表助手下载链接](http://blog.wmmou.cn/download/KLDYBZS.apk)
+ [三泰仪表助手下载链接](http://blog.wmmou.cn/download/三泰仪表助手.apk)
 
- [KLD仪表助手下载链接](http://blog.wmmou.cn/download/KLD仪表助手.apk)
 
-## KLD仪表助手更新说明
+## 仪表助手更新说明
 
-### 2017.08.01
+  **2017.08.01**
 
-#### null
+1.  修复一些BUG
 
 ---
